Fix: prevent navbar items from jumping when clicking them
Lack of a border-bottom on all items by default was causing a slight
vertical shift when applying the border to one of them.

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -93,6 +93,7 @@
 
 	@media ($lg) {
 		padding: spacer(0.5) 0;
+		border-bottom: 2px solid transparent;
 	}
 }
 
@@ -101,7 +102,7 @@
 
 	@media ($lg) {
 		font-weight: $font-weight-normal;
-		border-bottom: 2px solid $color-brand;
+		border-color: $color-brand;
 	}
 }
 
